@@ -42,13 +42,13 @@ public class WiseSayingFileRepository implements WiseSayingRepository {
     }
 
     public List<WiseSaying> findAll() {
+
         return Util.File.getPaths(DB_PATH).stream()
                 .map(Path::toString)
                 .filter(path -> path.endsWith(".json"))
                 .map(Util.Json::readAsMap)
                 .map(WiseSaying::fromMap)
-                .toList();
-
+                .collect(Collectors.toList());
     }
 
     public Page findByKeyword(String ktype, String kw, int itemsPerPage, int page) {
@@ -58,29 +58,33 @@ public class WiseSayingFileRepository implements WiseSayingRepository {
                     if (ktype.equals("content")) return w.getContent().contains(kw);
                     else return w.getAuthor().contains(kw);
                 })
-                .toList();
-        int totalItems = searchedWiseSayings.size();
-
-        List<WiseSaying> searchedResult = searchedWiseSayings.stream()
                 .sorted(Comparator.comparing(WiseSaying::getId).reversed())
                 .skip((long) (page - 1) * itemsPerPage)
                 .limit(itemsPerPage)
                 .collect(Collectors.toList());;
 
-        return new Page(searchedResult, totalItems, itemsPerPage);
+        return pageOf(searchedWiseSayings, itemsPerPage, page);
     }
 
     public Page findAll(int itemsPerPage, int page) {
 
-        List<WiseSaying> wiseSayings = findAll();
+        List<WiseSaying> sortedWiseSayings = findAll().stream()
+                .sorted(Comparator.comparing(WiseSaying::getId).reversed())
+                .collect(Collectors.toList());
+
+        return pageOf(sortedWiseSayings, itemsPerPage, page);
+    }
+
+    private Page pageOf(List<WiseSaying> wiseSayings, int itemsPerPage, int page) {
+
+        int totalItems = wiseSayings.size();
 
         List<WiseSaying> pageContent = wiseSayings.stream()
-                .sorted(Comparator.comparing(WiseSaying::getId).reversed())
                 .skip((long) (page - 1) * itemsPerPage)
                 .limit(itemsPerPage)
-                .toList();
+                .collect(Collectors.toList());
 
-        return new Page(pageContent, wiseSayings.size(), itemsPerPage);
+        return new Page(pageContent, totalItems, itemsPerPage);
     }
 
     public boolean deleteById(int id) {
